# rumi

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  dummy.rs  main.rs  pictures.rs
