[package]
name = "rumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.26.1"
rodio = "0.17.3"
lazy_static = "1.4"
id3 = "1.13.1"
ratatui-image = "0.9.0"
image = "0.24.0"
